k8s/ecommerce/11-backend-blue-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-blue
  namespace: ecommerce
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
      track: blue
  template:
    metadata:
      labels:
        app: backend
        track: blue
    spec:
      containers:
        - name: backend
          image: maonamao/backend:latest
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 12
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 6
