k8s/ecommerce/12-backend-green-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-green
  namespace: ecommerce
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
      track: green
  template:
    metadata:
      labels:
        app: backend
        track: green
    spec:
      containers:
        - name: backend
          image: crpi-crgxq2ovcvhcn869.cn-chengdu.personal.cr.aliyuncs.com/maonamao/backend:latest
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 12
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 6
