k8s/ecommerce/10-backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: ecommerce
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    app: backend
    track: blue
