k8s/ecommerce/21-frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: ecommerce
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: frontend
